<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">
            <Button
                style="@style/buttonCal"
                android:text="@string/numberSeven">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberEight">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberNine"
                android:textSize="20dp">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberDiv">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">
            <Button
                style="@style/buttonCal"
                android:text="@string/numberFour">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberFive">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberSix">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberMult">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">
            <Button
                style="@style/buttonCal"
                android:text="@string/numberOne">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberTwo">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberThree">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberMinus">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">
            <Button
                style="@style/buttonCal"
                android:text="@string/numberPoint">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberZero">
            </Button>
            <Button
                style="@style/buttonCal"
                android:background="@color/accent"
                android:text="@string/numberEquals">
            </Button>
            <Button
                style="@style/buttonCal"
                android:text="@string/numberPlus">
            </Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>